feat: update Sigil scripts to new syntax and enhance runtime narrative output
- Updated all example scripts to the latest Sigil syntax (imports, explicit essence, imbuing).
- Enhanced runtime.c and lexicon.h to support narrative simulation with HP tracking and consequences.
- Added low_skill_fireball.sigil example for skill-based simulation testing.
- Expanded .gitignore to cover build artifacts and environment noise.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 sandbox/
+
+# C / native build artifacts
+*.o
+*.obj
+*.a
+*.so
+*.dylib
+*.exe
+
+# Flex/Bison generated sources
+compiler/lex.yy.c
+compiler/sigil.tab.c
+compiler/sigil.tab.h
+compiler/sigil.output
+
+
+# Local compiler binary + debug symbols
+compiler/sigil_compiler
+compiler/*.dSYM/
+
+# Editor / OS noise
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
